# fiware-meteoroid

./: .flake8  .gitmodules  .travis.yml  Dockerfile  Pipfile  README.md  getting_started.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py
docker/: README.md  docker-compose.yml
docker/alarm-package-installer/: Dockerfile
docs/: api_specifications.md  architecture.md  cli.md  contribution_guidelines.md  features.md  getting_started.md  index.md
docs/function/: java.md  python.md
docs/installation_and_administration_manual/: install.md  logs.md
docs/programmers_manual/: accessing_orion_from_function.md  support_languages.md  using_function_parameters.md  using_third_party_package.md
docs/swagger/: swagger.yaml
docs/user_and_programmers_manual/: support_languages.md
k8s/helm/: Chart.yaml  README.md  values.yaml
k8s/helm/charts/: openwhisk-0.2.1.tgz  openwhisk-0.2.5.tgz
k8s/helm/templates/: NOTES.txt  _helpers.tpl  cratedb-deploy.yaml  cratedb-pvc.yaml  cratedb-service.yaml  grafana-deploy.yaml  grafana-service.yaml  meteoroid-deploy.yaml  meteoroid-migration-job.yaml  meteoroid-service.yaml  orion-deploy.yaml  orion-service.yaml  pixy-deploy.yaml  pixy-service.yaml  ql-deploy.yaml  ql-service.yaml  serviceaccount.yaml
meteoroid/: manage.py
meteoroid/cli/: README.rst  main.py
meteoroid/cli/v1/: endpoint.py  function.py  result.py  schedule.py  subscription.py
meteoroid/core/: admin.py  api_urls.py  api_views.py  models.py  serializers.py
meteoroid/core/libs/: decorators.py  faas_driver.py
meteoroid/core/migrations/: 0001_initial.py  0002_result.py  0003_auto_20191101_0748.py  0003_auto_20191105_1032.py  0004_subscription.py  0005_auto_20191111_0805.py  (+2 more)
meteoroid/meteoroid/: check_environment.py  settings.py  urls.py  wsgi.py
meteoroid/tests/: meteoroidtest.sh
sample_functions/: README.md
sample_functions/anonymous_context/: README.md  main.py  person1.json  subscription.json
sample_functions/slack_notification/: README.md  main.py
sample_functions/validation/: README.md  __main__.py  requirements.txt  schema.json
(+15 files in other folders)
