[metadata]
name = meteoroid
version = 1.0.0
url = http://github.com/OkinawaOpenLaboratory/fiware-meteoroid-cli
summary = CLI Client app for Meteoroid which is one of FIWARE components
author = Okinawa Open Laboratory
author-email = fiware-meteoroid-member@okinawaopenlabs.org
maintainer = Okinawa Open Laboratory
maintainer-email = fiware-meteoroid-member@okinawaopenlabs.org
description-file = meteoroid/cli/README.rst
license = AGPL v3
classifiers =
    Environment :: Console
    Natural Language :: English
    Natural Language :: Japanese
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3

[files]
packages =
    meteoroid

[entry_points]
console_scripts =
    meteoroid = meteoroid.cli.main:main

meteoroid.command =
    schedule_create = meteoroid.cli.v1.schedule:ScheduleCreate
    schedule_show = meteoroid.cli.v1.schedule:ScheduleShow
    schedule_list = meteoroid.cli.v1.schedule:ScheduleList
    schedule_delete = meteoroid.cli.v1.schedule:ScheduleDelete
    endpoint_create = meteoroid.cli.v1.endpoint:EndpointCreate
    endpoint_show = meteoroid.cli.v1.endpoint:EndpointShow
    endpoint_list = meteoroid.cli.v1.endpoint:EndpointList
    endpoint_delete = meteoroid.cli.v1.endpoint:EndpointDelete
    subscription_create = meteoroid.cli.v1.subscription:SubscriptionCreate
    subscription_show = meteoroid.cli.v1.subscription:SubscriptionShow
    subscription_list = meteoroid.cli.v1.subscription:SubscriptionList
    subscription_delete = meteoroid.cli.v1.subscription:SubscriptionDelete
    result_show = meteoroid.cli.v1.result:ResultShow
    result_list = meteoroid.cli.v1.result:ResultList
    function_show = meteoroid.cli.v1.function:FunctionShow
    function_list = meteoroid.cli.v1.function:FunctionList
    function_create = meteoroid.cli.v1.function:FunctionCreate
    function_update= meteoroid.cli.v1.function:FunctionUpdate
    function_delete= meteoroid.cli.v1.function:FunctionDelete
